Cambio de List.of a Arrays.asList para compatibilidad con Java 8